# stereo_thermal

./: README.md
install/: local_setup.sh  setup.sh
install/pc_sub/lib/pc_sub/: pc_sub
install/pc_sub/share/pc_sub/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zed_aruco_localization/include/zed_aruco_localization/: aruco.hpp  aruco_loc_visibility_control.hpp  zed_aruco_localization_component.hpp
install/zed_aruco_localization/share/zed_aruco_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/zed_components/include/zed_components/: cost_traversability.hpp  sl_logging.hpp  sl_tools.hpp  sl_types.hpp  sl_win_avg.hpp  visibility_control.hpp  zed_camera_component.hpp
install/zed_components/share/zed_components/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/zed_depth_to_laserscan/share/zed_depth_to_laserscan/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/zed_display_rviz2/share/zed_display_rviz2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/zed_interfaces/share/zed_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/zed_multi_camera/share/zed_multi_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/zed_ros2/share/zed_ros2/: package.sh  (+5 more)
log/: latest_build
src/pc_sub/: CMakeLists.txt  package.xml
src/pc_sub/src/: pc_sub.cpp
(+490 files in other folders)
